# zed_ros2

./: README.md
install/: local_setup.sh  setup.sh
install/darknet_ros_msgs/include/darknet_ros_msgs/action/detail/: check_for_objects__functions.c
install/darknet_ros_msgs/share/darknet_ros_msgs/: package.sh
install/darknet_ros_msgs/share/darknet_ros_msgs/cmake/: darknet_ros_msgs__rosidl_generator_cExport-noconfig.cmake  darknet_ros_msgs__rosidl_generator_cExport.cmake  darknet_ros_msgs__rosidl_typesupport_cExport.cmake  darknet_ros_msgs__rosidl_typesupport_cppExport-noconfig.cmake  darknet_ros_msgs__rosidl_typesupport_introspection_cExport.cmake
install/depth/share/depth/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/open_cam/lib/open_cam/: open_cam
install/open_cam/share/ament_index/resource_index/package_run_dependencies/: open_cam
install/open_cam/share/ament_index/resource_index/parent_prefix_path/: open_cam
install/open_cam/share/open_cam/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/open_cam/share/open_cam/cmake/: open_camConfig-version.cmake  open_camConfig.cmake
install/open_cam/share/open_cam/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build
src/open_cam/: CMakeLists.txt
src/open_cam/src/: main.cpp
